DataUsageView: Properly handle no SIM card state
Ashutosh: Code taken from DataSwitchTile

Co-authored-by: AshutoshSundresh <ashutoshsundresh@gmail.com>

--- a/packages/SystemUI/res/values/ssos_strings.xml
+++ b/packages/SystemUI/res/values/ssos_strings.xml
@@ -198,4 +198,7 @@
     <!-- Screenshot Delete Toast -->
     <string name="delete_screenshot_toast">Screenshot deleted</string>
 
+    <!-- Content description of the no sim [CHAR LIMIT=NONE] -->
+    <string name="no_sim_card_available">No SIM card</string>
+
 </resources>
